--- a/HoopGameNight-front/src/styles.scss
+++ b/HoopGameNight-front/src/styles.scss
@@ -21,8 +21,8 @@ html {
 }
 
 html, body {
-  height: 100%;
-  height: -webkit-fill-available;
+  min-height: 100%;
+  min-height: -webkit-fill-available;
   overflow-x: hidden;
   overscroll-behavior-y: none; /* Prevents pull-to-refresh elastic scrolling for native feel */
 }
